--- a/light-ui/index.html
+++ b/light-ui/index.html
@@ -7,6 +7,7 @@
     <title>Asset Management</title>
 </head>
 <body>
-    <script src="./dist/webpack.bundle.js"></script>
+    <div id="app"></div>
+    <!-- <script src="./dist/webpack.bundle.js"></script> -->
 </body>
 </html>
